--- a/login.html
+++ b/login.html
@@ -6,7 +6,31 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="login.css">
 </head>
-<body class="bg-dark">
-    
+<body>
+    <section class="bg-dark">
+        <div class="login-container">
+            <div class="login-heading">
+                <img src="assets/js loog.png" class="login-heading-icon" alt="">
+                <h1 class="text-white">Javascript Developer Class</h1>
+            </div>
+            <div class="login-content">
+                <div class="image-container">
+                    <img src="assets/login-image.png" class="login-image" alt="login illustration">
+                </div>
+                <div class="form-container">
+                    <form class="login-form">
+                       <div class="input-container">
+                        <label class="text-white" for="login-email">Email</label>
+                        <input class="form-input" type="email" name="login-email" id="login-email">
+                       </div>
+                       <div class="input-container">
+                        <label class="text-white" for="login-password">Password</label>
+                        <input class="form-input" type="Password" name="login-password" id="login-password">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>    
 </body>
 </html>
